[metadata]
name = co2eq
version = 0.0.3
author = Daniel Migault
author_email = mglt.biz@gmail.com
description = "Compute CO2 equivalent emissions"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglt/co2eq
project_urls =
    Bug Tracker = https://github.com/mglt/co2eq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.6

include_package_data=True

[options.packages.find]
where = src
