[metadata]
name = co2eq
version = 0.0.4
author = Daniel Migault
author_email = mglt.biz@gmail.com
description = "Compute CO2 equivalent emissions"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglt/co2eq
project_urls =
    Bug Tracker = https://github.com/mglt/co2eq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = src
## packages = find:
## We are using 'find_namespace' instead of 'find:' to enable data files
## being stored under a data subdirectory.
## The files to be considered as data files in the package
## are described by the options.package_data. 
packages = find_namespace:
python_requires = >=3.10

## include_package_data is used to detect the data files 
## that are stored in the in.MANIFEST 
## We are using an alternative method 'options.package_data'
## as to have everything specified in the setup.cfg file. 
## The in.MANISFEST can be removed.
## We prefer to have everything specifie din a single file. 
## see https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# include_package_data=True

## install_requires indicates to pip the dependencies.
## it is genmerated from teh requirement.txt generate
## using pipreqs in the src directory.
## we have commented packages that have been modified
##install_requires =
##  amadeus==8.0.0
###  climate_neutral==0.1.dev0
###  countryinfo==0.1.2
##  environs==9.5.0
##  geopy==2.3.0
##  iso8601==1.1.0
##  isodate==0.6.1
##  matplotlib==3.7.1
##  ourairports==1.1.0.20221011
##  pandas==2.0.2
##  pip==22.0.2
##  requests==2.28.1
##  setuptools==59.6.0
##  websockets==11.0.3

[options.packages.find]
where = src

[options.package_data]
co2eq.data.ietf =
    *.json.gz
co2eq.data.ietf.meeting_attendee_list.json =
    *.json.gz
co2eq.data.icann =
    *.json.gz
co2eq.data.icann.meeting_attendee_list.json =
    *.json.gz
co2eq.data =
    *.json.gz

[options.entry_points]
console_scripts =
    co2eq-get-attendee-list = co2eq.cli.get_attendee_list:cli
    co2eq-get-flight = co2eq.cli.get_flight:cli
    co2eq-plot-meeting = co2eq.cli.plot_meeting:cli
